# dpost-v2-refactor

./: .coverage  .env  .env.example  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_README.md  FileProcessor.py  GLOSSARY.csv  LICENSE  PC_PLUGIN_README.md  README.md  REM_watchdog.py  SECURITY.md  USER_README.md  compile_codebase.py  config.toml  decisionlog.md  device.env  elid.json  elid_explorer.py  event_gui_session.py  example_json.json  example_xml.xml  file_watchdog.py  full_watchdog.py  fwd_dev.py  horiba_persistance_testcase.py  ipatwatchdog.ipynb  ipatwatchdog.py  json_combine_test.py  kadi_download_test.py  main.py  metadata_watchdog.py  notes.md  (+21 more)
.github/branch-protection/: main.required-checks.json
.github/instructions/: concise_coding.instructions.md
.github/workflows/: public-ci.yml  rewrite-ci.yml
PhenomXL Bilder/Records/: record_persistence.json
configs/: dpost-v2-prod.config.json  dpost-v2.config.json
core/: device_watchdog_app.py  runner_wd_base.py  settings_store.py
core/app/: logger.py
core/config/: constants.py
core/handlers/: file_event_handler.py
core/processing/: file_process_manager.py  file_processor_abstract.py  file_processor_sem.py  filename_validator.py  metadata_extractor.py
core/records/: id_generator.py  local_record.py  record_manager.py  record_persistence.py
core/sessions/: session_manager.py
core/storage/: filesystem_utils.py  path_manager.py  storage_manager.py
core/sync/: sync_abstract.py  sync_kadi.py
core/ui/: dialogs.py  ui_tkinter.py
devices/: deploy_testing_office.yml  sem_tischrem_blb.yml  utm_zwick_blb.yml
devices/SEM_TischREM_BLB/: file_processor_tischrem.py  run_wd_tischrem.py  settings_tischrem.py
devices/UTM_Zwick_BLB/: file_processor_utm.py
docs/architecture/: 20260303-architecture-overview-and-code-story.md  README.md  architecture-baseline.md  architecture-contract.md  extension-contracts.md  processing_pipeline.puml  responsibility-catalog.md
docs/checklists/: 20250204-utm_zwick_sentinel_workflow_checklist.md  20260216-utm_zwick_end_series_failure_checklist.md  20260218-dpost-architecture-tightening-checklist.md  20260219-dpost-phase9-13-full-strangler-checklist.md  20260219-post-sunset-compatibility-retirement-checklist.md  20260221-coverage-hardening-action-items-checklist.md  20260221-dpost-deep-core-runtime-retirement-checklist.md  20260221-dpost-full-legacy-decoupling-clean-architecture-checklist.md  20260221-final-manual-validation-runbook.md  20260221-full-legacy-repo-retirement-checklist.md  20260221-overnight-refactor-execution-checklist.md  20260221-part3-domain-layer-extraction-checklist.md  20260302-naming-settings-sot-migration-execution-checklist.md  20260303-oss-readiness-hardening-checklist.md  20260303-public-ci-implementation-checklist.md  20260303-startup-settings-ownership-consolidation-slice-checklist.md  20260303-v2-cloud-agent-week1-execution-checklist.md  20260304-v2-ci-v2-gates-lane-completion-checklist.md  20260304-v2-contracts-interfaces-completion-checklist.md  20260304-v2-infrastructure-adapters-phase2-hardening-checklist.md  20260304-v2-plugins-device-system-implementation-checklist.md  20260304-v2-pseudocode-gap-closure-checklist.md  20260304-v2-pseudocode-population-checklist.md  20260304-v2-pseudocode-traceability-lane-completion-checklist.md  20260304-v2-pseudocode-traceability-refresh-checklist.md  20260304-v2-pseudocode-traceability-refresh-execution-checklist.md  20260304-v2-pseudocode-traceability-work-summary-checklist.md  20260304-v2-startup-bootstrap-lane-checklist.md  20260305-stabilization-ci-reliability-checklist.md  20260305-stabilization-ci-reliability-detailed-work-checklist.md  20260305-stabilization-ci-reliability-work-summary-checklist.md  20260305-v2-architecture-handshake-first-checklist.md  20260305-v2-legacy-cleanup-closeout-checklist.md  20260305-v2-legacy-docs-tooling-lane-completion-checklist.md  20260305-v2-manual-launch-plugin-discovery-checklist.md  20260305-v2-manual-launch-validation-checklist.md  20260305-v2-manual-pc-device-bringup-checklist.md  20260305-v2-pc-device-runtime-wiring-checklist.md  (+14 more)
docs/planning/: TEMPLATE.md  (+40 more)
ipat_data_watchdog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build-v2-headless.ps1  launch-three-plugin-lanes.ps1  show-three-plugin-lane-status.ps1  smoke-v2-headless-exe.ps1
src/: __init__.py  output.txt  run.py
test_elid/: test.elid
tests/: conftest.py
(+1298 files in other folders)
