[project]
name = "ipat-watchdog"
version = "0.1.0"
description = "Scientific watchdog app for automated data ingestion"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "kadi-apy",
    "watchdog",
    "prometheus_client",
    "python-dotenv",
    "requests",
    "pywin32",
    "pywin32-ctypes",
    "PyYAML",
    "flask",
    "waitress",
    "pluggy",
]

[project.optional-dependencies]
ci     = ["pytest", "pyfakefs"]
build  = ["pyinstaller"]
dev    = ["black", "mypy", "ruff"]

# Device plugin dependencies
sem_phenomxl2 = []
psa_horiba = []
utm_zwick = []
dsv_horiba = []
extr_haake = []

# PC plugin dependencies
tischrem_blb = []
zwick_blb = []
horiba_blb = []
haake_blb = []
test_pc = []

[project.scripts]
ipat-watchdog = "ipat_watchdog.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
