[project]
name = "ipat-watchdog"
version = "0.1.0"
description = "Scientific watchdog app for automated data ingestion"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "watchdog",
    "prometheus_client",
    "python-dotenv",
    "requests",
    "pywin32",
    "pywin32-ctypes",
    "PyYAML",
    "flask",
    "waitress",
    "pluggy",
]

[project.optional-dependencies]
ci              = ["pytest", "pyfakefs"]
build           = ["pyinstaller"]
dev             = ["black", "mypy", "ruff"]
kadi            = ["kadi-apy"]

# Device plugin dependencies
sem_phenomxl2   = []
psa_horiba      = []
utm_zwick       = []
dsv_horiba      = []
extr_haake      = []
erm_hioki       = []
rhe_kinexus     = []
rmx_eirich_el1  = []
rmx_eirich_r01  = []

# PC plugin dependencies
tischrem_blb    = []
zwick_blb       = []
horiba_blb      = []
haake_blb       = []
kinexus_blb     = []
hioki_blb       = []
test_pc         = []
eirich_blb      = []

[project.scripts]
ipat-watchdog = "ipat_watchdog.__main__:main"
dpost = "dpost.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "legacy: Tests validating current ipat_watchdog behavior.",
    "migration: Tests validating dpost migration scaffolding and cutover paths.",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
