[project]
name = "dpost"
version = "0.1.0"
description = "Scientific watchdog app for automated data ingestion"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

dependencies = [
    "watchdog",
    "prometheus_client",
    "python-dotenv",
    "requests",
    "pywin32; sys_platform == 'win32'",
    "pywin32-ctypes; sys_platform == 'win32'",
    "PyYAML",
    "flask",
    "waitress",
    "pluggy",
]

[project.optional-dependencies]
ci              = ["pytest", "pyfakefs"]
build           = ["pyinstaller"]
dev             = ["black", "mypy", "ruff"]
kadi            = ["kadi-apy"]

# Device plugin dependencies
sem_phenomxl2   = []
psa_horiba      = []
utm_zwick       = []
dsv_horiba      = []
extr_haake      = []
erm_hioki       = []
rhe_kinexus     = []
rmx_eirich_el1  = []
rmx_eirich_r01  = []

# PC plugin dependencies
tischrem_blb    = []
zwick_blb       = []
horiba_blb      = []
haake_blb       = []
kinexus_blb     = []
hioki_blb       = []
test_pc         = []
eirich_blb      = []

[project.scripts]
dpost = "dpost_v2.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers -m \"not manual\""
markers = [
    "legacy: Archived historical compatibility tests outside active V2 lanes.",
    "manual: Manually-invoked smoke tests excluded from default CI/test runs.",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
extend-select = ["D"]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
]
per-file-ignores = { "tests/**" = ["D"], "tests/migration/**" = ["D"] }

[tool.black]
line-length = 88
# Keep Black enforcement focused on active V2 surfaces.
extend-exclude = '''
(
  ^/tests/unit/
  | ^/tests/integration/
  | ^/tests/manual/
  | ^/tests/helpers/
  | ^/tests/conftest\.py$
)
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
